# ray-tracing-in-one-weekend

./: CMakeLists.txt  README.md
.github/workflows/: github-actions-demo.yml
include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/: main.cpp
